--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     <div class="contact__card">
                         <i class='bx bx-mail-send contact__card-icon' ></i>
                         <h3 class="contact__card-title">Email</h3>
-                        <span class="contact__card-data">user@gmail.com</span>
+                        <span class="contact__card-data">yashbgv2002@gmail.com</span>
 
                         <a href="mailto:yashbgv2002@gmail.com" target="_blank" class="contact__button">
                             Write me <i class='bx bxs-right-arrow-alt contact__button-icon' ></i>
@@ -527,7 +527,7 @@
                     <div class="contact__card">
                         <i class='bx bxl-whatsapp contact__card-icon' ></i>
                         <h3 class="contact__card-title">Whatsapp</h3>
-                        <span class="contact__card-data">999-888-7777</span>
+                        <span class="contact__card-data">+91 9713810567</span>
 
                         <a href="https://api.whatsapp.com/send?phone=913810567&text=Hello, more information" target="_blank" class="contact__button">
                             Write me <i class='bx bxs-right-arrow-alt contact__button-icon' ></i>
@@ -537,7 +537,7 @@
                     <div class="contact__card">
                         <i class='bx bxl-instagram contact__card-icon' ></i>
                         <h3 class="contact__card-title">Instagram</h3>
-                        <span class="contact__card-data">username</span>
+                        <span class="contact__card-data">___yrb__</span>
 
                         <a href="https://www.instagram.com/___yrb_" target="_blank" class="contact__button">
                             Write me <i class='bx bxs-right-arrow-alt contact__button-icon' ></i>
