--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h3 class="home__education">Web Developer</h3>
 
                     <div class="home__buttons">
-                        <a downlaod="" href="assets/pdf/Yashraj Bhargava Resume.pdf" class="button button--ghost">
+                        <a downlaod="" href="assets/pdf/RESUME.pdf" class="button button--ghost">
                             Download CV
                         </a>
                         <a href="#about" class="button">About Me</a>
